# operator-sdk

./: .gitignore  WORKSPACE
cmd/manager/: BUILD.bazel  main.go
deploy/: operator.yaml  role.yaml  role_binding.yaml  service_account.yaml
deploy/crds/: freeipa-operator_v1alpha1_freeipaservice_cr.yaml  freeipa-operator_v1alpha1_freeipaservice_crd.yaml
pkg/: BUILD.bazel
pkg/apis/: addtoscheme_freeipaoperator_v1alpha1.go
pkg/apis/freeipaoperator/v1alpha1/: doc.go  freeipaservice_types.go  register.go  zz_generated.deepcopy.go  zz_generated.openapi.go
pkg/controller/: add_freeipaservice.go
pkg/controller/freeipaservice/: freeipaservice_controller.go
version/: BUILD.bazel
