load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "freeipa-controller",
    srcs = [
        "controller/freeipaservice/freeipaservice_controller.go",
        "controller/add_freeipaservice.go",
        "controller/controller.go",
        "apis/addtoscheme_freeipaoperator_v1alpha1.go",
        "apis/apis.go",
        "apis/freeipaoperator/v1alpha1/doc.go",
        "apis/freeipaoperator/v1alpha1/freeipaservice_types.go",
        "apis/freeipaoperator/v1alpha1/register.go",
        "apis/freeipaoperator/v1alpha1/zz_generated.deepcopy.go",
        "apis/freeipaoperator/v1alpha1/zz_generated.openapi.go",
    ],
    importpath = "github.com/briantopping/freeipa-operator",
    deps = [
        "//vendor/github.com/go-openapi/spec:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/kube-openapi/pkg/common:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/controller/controllerutil:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/controller:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/handler:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/reconcile:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/log:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/scheme:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/source:go_default_library",
    ],
)
